--- a/DbCore/DbCore.vcxproj
+++ b/DbCore/DbCore.vcxproj
@@ -149,10 +149,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DbCore.cpp" />
+    <ClCompile Include="Query.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Utilities\TestUtilities\TestUtilities.h" />
     <ClInclude Include="DbCore.h" />
+    <ClInclude Include="Query.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DateTime\DateTime.vcxproj">
