add TEST PAKAGE & EXECUTIVE PAKAGE

--- a/Executive/Executive.vcxproj
+++ b/Executive/Executive.vcxproj
@@ -20,13 +20,13 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{523B7482-C101-4109-BAA0-CCAE63589726}</ProjectGuid>
-    <RootNamespace>Query</RootNamespace>
+    <ProjectGuid>{2E47C7B3-0D3F-4DA4-8A19-3CBBA4F97ED6}</ProjectGuid>
+    <RootNamespace>Executive</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -76,6 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);EXECUTIVE</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -115,10 +116,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Query.h" />
+    <ClCompile Include="Executive.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Query.cpp" />
+    <ProjectReference Include="..\Test\Test.vcxproj">
+      <Project>{5ea56767-f719-483a-ab97-5b5eb06e54e3}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
