--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{523B7482-C101-4109-BAA0-CCAE63589726}</ProjectGuid>
-    <RootNamespace>Query</RootNamespace>
+    <ProjectGuid>{5EA56767-F719-483A-AB97-5B5EB06E54E3}</ProjectGuid>
+    <RootNamespace>Test</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -115,10 +115,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Query.h" />
+    <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Query.cpp" />
+    <ClInclude Include="Test.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DateTime\DateTime.vcxproj">
+      <Project>{c1e1f450-b7e1-4796-84d5-7d3c831dff68}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Query\Query.vcxproj">
+      <Project>{523b7482-c101-4109-baa0-ccae63589726}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
