--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -124,6 +124,9 @@
     <ProjectReference Include="..\DateTime\DateTime.vcxproj">
       <Project>{c1e1f450-b7e1-4796-84d5-7d3c831dff68}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\DbCore\DbCore.vcxproj">
+      <Project>{9eddb1b5-90e6-4d4f-8b3b-dba3e3ffdb7a}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Query\Query.vcxproj">
       <Project>{523b7482-c101-4109-baa0-ccae63589726}</Project>
     </ProjectReference>
